[workspace]
members = [".", "helpers"]
resolver = "2"

[package]
name = "phonk"
version = "0.0.1"
authors = ["Lancelot Liu <me@lancy.dev>"]
edition = "2024"
description = "`no_std`-friendly live monophonic pitch detection"
readme = "README.md"
repository = "https://github.com/lancylot2004/phonk.rs"
license = "MIT"
keywords = ["pitch"]
categories = ["multimedia::audio", "no-std"]

[dependencies]

[dev-dependencies]
phonk-helpers = { path = "helpers" }

# Benchmarking
criterion = "0.8.2"

# Serialisation
serde_json = "1.0.149"

# Console Plotting
plotters = "0.3.7"
clap = { version = "4.5.60", features = ["derive"] }

[[bench]]
name = "bench"
harness = false
